--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,23 @@
+#server.port=8080
+#spring.datasource.name=multifetch
+#spring.datasource.url=jdbc:mysql://localhost:3306/multifetch
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+
 server.port=8080
-spring.datasource.name=multifetch
-spring.datasource.url=jdbc:mysql://localhost:3306/multifetch
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/multifetch
+spring.datasource.username=testdb
+spring.datasource.password=testdb
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+springfox.documentation.swagger.use-model-v3=false
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
