swagger with postgres implemented and lombook jwt implemented imporved code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,25 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 springfox.documentation.swagger.use-model-v3=false
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#spring.mail.protocol=smtp
+#spring.mail.host=smtp.mailtrap.io
+#spring.mail.port=2525
+##spring.mail.username=0128491df14b6d
+##spring.mail.password=7b6d7ha59a1f08
+#spring.mail.properties.mail.smtp.auth = true
+#spring.mail.properties.mail.smtp.starttls.enable = true
+
+#SendMail
+#email.sender.host=smtp.gmail.com
+email.sender.host=email-smtp.ap-southeast-1.amazonaws.com
+email.sender.port=587
+#email.sender.username=amitmaurya.tutorx@gmail.com
+#email.sender.password=test@password3
+#spring.mail.username=AKIAQSCAAADIOU4BSHKS
+#spring.mail.password=BPP0Vcnl+at15VPMINTVIVZy0q76xFEIU0Hncq9qdiKv
+email.transport.protocol=smtp
+email.smtp.auth=true
+email.smtp.starttls.enable=true
+email.debug=false
+#email.from.address=test@test.com
