--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,16 +30,16 @@ springfox.documentation.swagger.use-model-v3=false
 #spring.mail.properties.mail.smtp.auth = true
 #spring.mail.properties.mail.smtp.starttls.enable = true
 
-#SendMail
-#email.sender.host=smtp.gmail.com
-email.sender.host=email-smtp.ap-southeast-1.amazonaws.com
-email.sender.port=587
-#email.sender.username=amitmaurya.tutorx@gmail.com
-#email.sender.password=test@password3
-#spring.mail.username=AKIAQSCAAADIOU4BSHKS
-#spring.mail.password=BPP0Vcnl+at15VPMINTVIVZy0q76xFEIU0Hncq9qdiKv
-email.transport.protocol=smtp
-email.smtp.auth=true
-email.smtp.starttls.enable=true
-email.debug=false
-#email.from.address=test@test.com
+##SendMail
+##email.sender.host=smtp.gmail.com
+#email.sender.host=email-smtp.ap-southeast-1.amazonaws.com
+#email.sender.port=587
+##email.sender.username=amitmaurya.tutorx@gmail.com
+##email.sender.password=test@password3
+##spring.mail.username=AKIAQSCAAADIOU4BSHKS
+##spring.mail.password=BPP0Vcnl+at15VPMINTVIVZy0q76xFEIU0Hncq9qdiKv
+#email.transport.protocol=smtp
+#email.smtp.auth=true
+#email.smtp.starttls.enable=true
+#email.debug=false
+##email.from.address=test@test.com
