swagger with postgres implemented and lombook jwt implemented imporved code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 springfox.documentation.swagger.use-model-v3=false
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.servlet.multipart.enabled=true
 
 #spring.mail.protocol=smtp
 #spring.mail.host=smtp.mailtrap.io
