swagger with postgres implemented and lombook jwt implemented imporved code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,12 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 springfox.documentation.swagger.use-model-v3=false
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=40KB
+#spring.servlet.multipart.max-request-size=40KB
+#spring.servlet.multipart.file-size-threshold=1KB
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 
 #spring.mail.protocol=smtp
 #spring.mail.host=smtp.mailtrap.io
