swagger with postgres implemented and lombook jwt implemented imporved code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 springfox.documentation.swagger.use-model-v3=false
 spring.servlet.multipart.enabled=true
+app.firebase-configuration-file=adept-tangent-278503-firebase-adminsdk-hzyem-c07a30f98f.json
 #spring.servlet.multipart.max-file-size=40KB
 #spring.servlet.multipart.max-request-size=40KB
 #spring.servlet.multipart.file-size-threshold=1KB
@@ -34,8 +35,9 @@ spring.servlet.multipart.enabled=true
 ##spring.mail.password=7b6d7ha59a1f08
 #spring.mail.properties.mail.smtp.auth = true
 #spring.mail.properties.mail.smtp.starttls.enable = true
-
 ##SendMail
+
+
 ##email.sender.host=smtp.gmail.com
 #email.sender.host=email-smtp.ap-southeast-1.amazonaws.com
 #email.sender.port=587
