--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,21 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.0.12.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>6.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>4.2.0</version>
+        </dependency>
 
         <!--<dependency>
             <groupId>org.springframework.plugin</groupId>
